# cemu-shortcut-helper

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cemu.rs  client.rs  game.rs  image.rs  main.rs
