[package]
name = "cemu-shortcut-helper"
description = "Creates shortcuts for games installed in Cemu."
authors = ["zduny <dzduniak@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
scraper = "0.12.0"
lazy_static = "1.4.0"
image = "0.23.14"
ico = "0.1.0"
xmltree = "0.10.3"
mslnk = { git = "https://github.com/zduny/mslnk.git" }
clap = "3.0.0-beta.5"
