[package]
name = "cemu-shortcut-helper"
description = "Creates shortcuts for games installed in Cemu."
authors = ["zduny <dzduniak@gmail.com>"]
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.13.0"
lazy_static = "1.4.0"
image = "0.24.2"
ico = "0.1.0"
xmltree = "0.10.3"
mslnk = "0.1.8"
clap = "3.1.18"

[build-dependencies]
winres = "0.1.12"
