[package]
name = "cemu-shortcut-helper"
description = "Creates shortcuts for games installed in Cemu."
authors = ["zduny <dzduniak@gmail.com>"]
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.16.0"
lazy_static = "1.4.0"
image = "0.24.2"
ico = "0.3.0"
xmltree = "0.10.3"
mslnk = "0.1.8"
clap = "4.2.3"

[build-dependencies]
winres = "0.1.12"
